--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
+      - name: Debug paths
+        run: |
+          pwd
+          ls -la
+
       - name: Restore dependencies
         run: dotnet restore
 
