Fixing github action 5. Finally it will work! Im sure

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -31,10 +31,9 @@ jobs:
       - name: Pack NuGet package
         run: dotnet pack --configuration Release --no-build -p:PackageVersion=${GITHUB_REF_NAME#v}
 
-
       - name: Publish to GitHub Org Packages
         run: |
-          dotnet nuget push "bin/Release/*.nupkg" \
+          dotnet nuget push "src/bin/Release/*.nupkg" \
             --api-key ${{ secrets.NUGET_WRITING_PAT }} \
             --source "https://nuget.pkg.github.com/Talapkerbek/index.json" \
             --skip-duplicate
